@@ -243,3 +243,11 @@ Feature: Elements
     Then I should know it exists
     And I should know it is visible
     And I should know the text is "found using data-entity"
+
+  Scenario: Accessing an HTML 5 element using the declaration
+    When I retrieve the figure uisng the declaration
+    Then I should see the figure contains an image
+
+  Scenario: Accessing an HTML 5 element using the element method
+    When I retrieve the figure using the element
+    Then I should see the figure contains an image
