@@ -173,5 +173,9 @@
       The details
     </details>
 
+    <figure id='figure_id'>
+      <img src="images/img_pulpit.jpg" alt="The Pulpit Rock" width="304" height="228">
+    </figure>
+
   </body>
 </html>
